--- a/front/.env.example
+++ b/front/.env.example
@@ -1,4 +1,4 @@
-# Vite environment variables for College ERP Frontend
+# Vite environment variables for AcademiX Frontend
 
 # Backend API URL (adjust based on your backend server)
 VITE_BACKEND_URL=http://localhost:5000
